# my-personal-finance-service

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  bandit.yaml  codecov.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  dependencies.yml
django_project/: exceptions.py  settings.py  test_settings.py  urls.py
django_project/templates/: swagger-ui.html
entities/: entities.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py  0002_rename_tag_tags.py
use_cases/accounts/: accounts.py  exceptions.py
use_cases/accounts/tests/: test_accounts_use_cases.py
use_cases/records/: exceptions.py  record.puml  records.py  test_record_use_cases.py
use_cases/records/tests/: test_record_use_cases.py
use_cases/tags/: exceptions.py  tags.puml  tags.py
use_cases/tags/tests/: test_tags_use_cases.py
use_cases/users/: users.puml  users.py
use_cases/users/tests/: test_user_use_cases.py
users/: entities.py  managers.py  models.py  tests.py
users/api/: tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/use_cases/: exceptions.py  users.py
users/use_cases/tests/: test_user_use_cases.py
