[tool.poetry]
name = "my-personal-finance-service"
version = "0.1.0"
description = "One more finance app out there. But this is different. Because is tailored for me. :D"
authors = ["matheuscas <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django-ninja = "^0.19.1"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
environs = "^9.5.0"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
isort = "^5.10.1"
commitizen = "^2.27.1"
toml = "^0.10.2"
bandit = "^1.7.4"
pycln = "^2.1.2"
flake8 = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
