[tool.poetry]
name = "my-personal-finance-service"
version = "0.1.0"
description = "One more finance app out there. But this is different. Because is tailored for me. :D"
authors = ["matheuscas <matheus.mcas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
Django = "^4.2.3"
psycopg2-binary = "^2.9.5"
python-slugify = "^8.0.1"
types-python-slugify = "^8.0.0.1"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
environ = "^1.0"
django-environ = "^0.10.0"
drf-spectacular = "^0.26.3"
django-stubs = "^4.2.3"
djangorestframework-stubs = "^3.14.2"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
bandit = "^1.7.4"
pycln = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
flake8-bugbear = "^23.1.14"
pytest-xdist = "^3.1.0"
mypy = "^1.1.1"
types-mock = "^5.0.0.6"
black = "^23.3.0"
pre-commit = "^3.3.2"
commitizen = "^3.2.2"
pytest = "^7.3.1"
ruff = "^0.0.272"
install = "^1.3.5"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
coverage = "^7.2.7"
psutil = "^5.9.5"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 81

[tool.pycln]
all = true

[tool.ruff]
select = ["E", "F", "B", "UP"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 81

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests.py" = ["S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="django_project.settings"
python_files = "test_*.py tests.py"
env_files = ".env"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_project.settings"
